--- a/Sidewinder/printer.cfg
+++ b/Sidewinder/printer.cfg
@@ -12,6 +12,7 @@
 # MCU and Printer configuration
 ########################################
 
+# import pins
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
 
@@ -38,74 +39,59 @@ speed: 100.0
 ########################################
 
 [stepper_x]
-step_pin: P2.2
-dir_pin: !P2.3
-enable_pin: !P2.1
+step_pin: X_STEP
+dir_pin: !X_DIR
+enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
-endstop_pin: ^P1.29  # ^P1.28 for X-max
-position_endstop: 0
-position_max: 310
+endstop_pin: !X_MIN
 homing_speed: 50
 
 [stepper_y]
-step_pin: P0.19
-dir_pin: !P0.20
-enable_pin: !P2.8
+step_pin: Y_STEP
+dir_pin: !Y_DIR
+enable_pin: !Y_EN
 microsteps: 16
 rotation_distance: 40
-endstop_pin: ^P1.27  # ^P1.26 for Y-max
-position_endstop: 0
+endstop_pin: !Y_MIN
 position_max: 310
 homing_speed: 50
 
 [stepper_z]
-step_pin: P0.22
-dir_pin: !P2.11
-enable_pin: !P0.21
+step_pin: Z_STEP
+dir_pin: Z_DIR
+enable_pin: !Z_EN
 microsteps: 16
 rotation_distance: 8
-endstop_pin: ^P1.25  # ^P1.24 for Z-max
+endstop_pin: !Z_MIN
 position_endstop: 0.0
 position_max: 400
 
 [stepper_z1]
-step_pin: P1.9
-dir_pin: !P1.14
-enable_pin: !P0.1
+step_pin: E1_STEP
+dir_pin: E1_DIR
+enable_pin: !E1_EN
 microsteps: 16
 rotation_distance: 8
-#endstop_pin: ^P1.24
-#position_endstop: 0.5
-position_max: 400
+#endstop_pin: !Z_MAX
 
 [extruder]
-step_pin: P2.13
-dir_pin: !P0.11
-enable_pin: !P2.12
+step_pin: E0_STEP
+dir_pin: E0_DIR
+enable_pin: !E0_EN
 microsteps: 16
 rotation_distance: 7.4
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: P2.7
+heater_pin: HE0
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: P0.23
-control: pid
-pid_Kp: 22.2
-pid_Ki: 1.08
-pid_Kd: 114
-min_temp: 0
+sensor_pin: TH0
 max_temp: 260
 
 [heater_bed]
-heater_pin: P2.5
+heater_pin: HB0
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: P0.24
-control: pid
-pid_Kp: 54.027
-pid_Ki: 0.770
-pid_Kd: 948.182
-min_temp: 0
+sensor_pin: TB0
 max_temp: 130
 
 ########################################
@@ -113,7 +99,7 @@ max_temp: 130
 ########################################
 
 [fan]
-pin: P1.4
+pin: HE1
 
 [controller_fan my_controller_fan]
 pin: P2.4
@@ -130,58 +116,42 @@ fan_speed: 1.0
 ########################################
 
 [tmc2209 stepper_x]
-uart_pin: P1.1
+uart_pin: X_UART
 run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 1000
 
 [tmc2209 stepper_y]
-uart_pin: P1.8
+uart_pin: Y_UART
 run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 1000
 
 [tmc2209 stepper_z]
-uart_pin: P1.10
+uart_pin: Z_UART
 run_current: 0.650
 hold_current: 0.450
 stealthchop_threshold: 1000
 
 [tmc2209 stepper_z1]
-uart_pin: P1.17
+uart_pin: E1_UART
 run_current: 0.650
 hold_current: 0.450
 stealthchop_threshold: 1000
 
 [tmc2209 extruder]
-uart_pin: P1.15
+uart_pin: E0_UART
 run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 1000
 
-
-########################################
-# EXP1 / EXP2 (display) pins
-########################################
-
-[board_pins]
-aliases:
-    # EXP1 header
-    EXP1_1=P1.31, EXP1_3=P0.18, EXP1_5=P0.15, EXP1_7=P1.0,  EXP1_9=<GND>,
-    EXP1_2=P1.30, EXP1_4=P0.16, EXP1_6=P0.17, EXP1_8=P1.22, EXP1_10=<5V>,
-    # EXP2 header
-    EXP2_1=P0.8, EXP2_3=P3.25, EXP2_5=P3.26, EXP2_7=P0.27, EXP2_9=<GND>,
-    EXP2_2=P0.7, EXP2_4=P0.28, EXP2_6=P0.9,  EXP2_8=<RST>, EXP2_10=<NC>
-    # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp1"
-
-# See the sample-lcd.cfg file for definitions of common LCD displays.
+# Display
 
 [display]
 lcd_type: st7920
 cs_pin: EXP1_7
 sclk_pin: EXP1_6
 sid_pin: EXP1_8
-#rst_pin: EXP1_4
 encoder_pins: ^EXP1_5, ^EXP1_3
 click_pin: ^EXP1_2
 
