--- a/Sidewinder/printer.cfg
+++ b/Sidewinder/printer.cfg
@@ -1,8 +1,7 @@
 # Based on https://3dprintbeginner.com/install-klipper-on-sidewinder-x1 
 # and https://github.com/KevinOConnor/klipper/blob/master/config/generic-mks-sgenl.cfg
 
-# SidewinderX1 with MKS_SGEN_L_V2.0 and TMC2209
-# sensorless Homing on X and Y (jumper on board)
+# SidewinderX1 with LPC1769 and TMC2209
 # 
 # rotation_distance = <full_steps_per_rotation> * <microsteps> / <steps_per_mm>
 # full_steps_per_rotation = 200 with 1.8degree steppers. 16 microsteps
@@ -13,8 +12,10 @@
 ########################################
 
 # import pins
+[include sgenlV2.cfg]
+
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_0E000019C2846AAF1EA64D5EC02000F5-if00
 
 [printer]
 kinematics: cartesian
@@ -45,6 +46,9 @@ enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: !X_MIN
+position_min: -5
+position_endstop: -5
+position_max: 300
 homing_speed: 50
 
 [stepper_y]
@@ -54,6 +58,8 @@ enable_pin: !Y_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: !Y_MIN
+position_min: -5
+position_endstop: -5
 position_max: 310
 homing_speed: 50
 
@@ -65,6 +71,8 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: !Z_MIN
 position_endstop: 0.0
+position_min: -3.775
+position_endstop: -3.775
 position_max: 400
 
 [stepper_z1]
@@ -80,18 +88,31 @@ step_pin: E0_STEP
 dir_pin: E0_DIR
 enable_pin: !E0_EN
 microsteps: 16
-rotation_distance: 7.4
+rotation_distance: 7.4067
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: HE0
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: TH0
+pressure_advance: 0.03
+#control: pid
+#pid_Kp: 22.2
+#pid_Ki: 1.08
+#pid_Kd: 114
+smooth_time: 0.5
+min_extrude_temp: 170
+min_temp: 10
 max_temp: 260
 
 [heater_bed]
 heater_pin: HB0
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: TB0
+#control: pid
+#pid_Kp: 54.027
+#pid_Ki: 0.770
+#pid_Kd: 948.182
+min_temp: 10
 max_temp: 130
 
 ########################################
@@ -102,8 +123,8 @@ max_temp: 130
 pin: HE1
 
 [controller_fan my_controller_fan]
-pin: P2.4
-heater: stepper_x, stepper_y, stepper_z, stepper_z1, extruder
+pin: P1.4
+heater: extruder
 
 [heater_fan my_nozzle_fan]
 pin: P2.6
@@ -114,6 +135,7 @@ fan_speed: 1.0
 ########################################
 # TMC2209 configuration
 ########################################
+[endstop_phase]
 
 [tmc2209 stepper_x]
 uart_pin: X_UART
@@ -155,3 +177,63 @@ sid_pin: EXP1_8
 encoder_pins: ^EXP1_5, ^EXP1_3
 click_pin: ^EXP1_2
 
+########################################
+# LED pins
+########################################
+
+[output_pin my_pin1]
+pin: P1.18
+value: 0
+shutdown_value: 0
+
+[output_pin my_pin2]
+pin: P1.19
+value: 0
+shutdown_value: 1
+
+[output_pin my_pin3]
+pin: P1.20
+value: 0
+shutdown_value: 0
+
+[output_pin my_pin4]
+pin: P1.21
+value: 0
+shutdown_value: 1
+
+[output_pin beeper]
+pin: EXP1_1
+value: 0
+shutdown_value: 0
+
+# macros
+[include mainsail.cfg]
+
+[homing_override]
+axes: z
+set_position_z: 0
+gcode:
+   G90
+   G0 Z3 F600
+   G28 X Y
+   G28 Z
+   G0 Z10 F1800
+   SET_GCODE_OFFSET Z=-.120
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 16.521
+#*# pid_ki = 0.532
+#*# pid_kd = 128.246
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 46.474
+#*# pid_ki = 0.550
+#*# pid_kd = 981.172
+#*#
+#*# [endstop_phase stepper_z]
+#*# trigger_phase = 54/64
