--- a/Ender5XY/printer.cfg
+++ b/Ender5XY/printer.cfg
@@ -14,44 +14,39 @@
 [include skr1_4t.cfg]
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_0E000019C2846AAF1EA64D5EC02000F5-if00
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_0D90FF06A49869AF7CE33E5EC62000F5-if00
 
 [printer]
 kinematics: corexy
 max_velocity: 300
 max_accel: 3000
-max_z_velocity: 10
-max_z_accel: 100
+max_z_velocity: 5
+max_z_accel: 50
 
 [bltouch]
 sensor_pin: ^Z_MIN
 control_pin: SERVO
-x_offset: 60.0
-y_offset: -30.0
-z_offset: 2.0
+sample_retract_dist: 5
+x_offset: 59.0
+y_offset: -32.0
+#z_offset: 2.0
 
 [bed_screws]
-screw1: 20,20
+screw1: 30,10
 screw1_name: front left
-screw2: 200,20
+screw2: 200,10
 screw2_name: front right 
 screw3: 200,180
 screw3_name: back right 
-screw4: 20,180
+screw4: 30,180
 screw4_name: back left
 speed: 100.0
 
 [bed_mesh]
-mesh_min: 20,20
-mesh_max: 200,200
+speed: 100
+mesh_min: 40,0
+mesh_max: 220,150
 probe_count: 4,4
-
-[safe_z_home]
-home_xy_position: 150,90
-speed: 50
-z_hop: 15
-z_hop_speed: 5
-move_to_previous: True
 
 ########################################
 # Stepper and Heater configuration
@@ -59,19 +54,19 @@ move_to_previous: True
 
 [stepper_x]
 step_pin: X_STEP
-dir_pin: !X_DIR
+dir_pin: X_DIR
 enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^X_MIN
-position_min: -20
-position_endstop: -20
+position_min: -25
+position_endstop: -25
 position_max: 220
 homing_speed: 50
 
 [stepper_y]
 step_pin: Y_STEP
-dir_pin: !Y_DIR
+dir_pin: Y_DIR
 enable_pin: !Y_EN
 microsteps: 16
 rotation_distance: 40
@@ -83,26 +78,24 @@ homing_speed: 50
 
 [stepper_z]
 step_pin: Z_STEP
-dir_pin: Z_DIR
+dir_pin: !Z_DIR
 enable_pin: !Z_EN
 microsteps: 16
-rotation_distance: 8
+rotation_distance: 4
 endstop_pin: probe:z_virtual_endstop
-position_endstop: 0.0
 position_min: -2
-position_endstop: 0
 position_max: 200
 
 [extruder]
 step_pin: E0_STEP
-dir_pin: E0_DIR
+dir_pin: !E0_DIR
 enable_pin: !E0_EN
 microsteps: 16
-rotation_distance: 7.4067
+rotation_distance: 8.1725
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: HE0
-sensor_type: EPCOS 100K B57560G104F
+sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH0
 pressure_advance: 0.03
 #control: pid
@@ -113,6 +106,7 @@ smooth_time: 0.5
 min_extrude_temp: 170
 min_temp: 10
 max_temp: 260
+max_extrude_only_distance: 100
 
 [heater_bed]
 heater_pin: HB0
@@ -130,10 +124,10 @@ max_temp: 130
 ########################################
 
 [fan]
-pin: HE1
+pin: FAN0
 
 [heater_fan coldend_fan]
-pin: FAN0
+pin: HE1
 heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
@@ -144,25 +138,25 @@ fan_speed: 1.0
 
 [tmc2208 stepper_x]
 uart_pin: X_UART
-run_current: 0.800
+run_current: 0.700
 hold_current: 0.500
-stealthchop_threshold: 1000
+#stealthchop_threshold: 1000
 
 [tmc2208 stepper_y]
 uart_pin: Y_UART
-run_current: 0.800
+run_current: 0.700
 hold_current: 0.500
-stealthchop_threshold: 1000
+#stealthchop_threshold: 1000
 
 [tmc2208 stepper_z]
 uart_pin: Z_UART
-run_current: 0.650
-hold_current: 0.450
+run_current: 0.700
+hold_current: 0.500
 stealthchop_threshold: 1000
 
 [tmc2208 extruder]
 uart_pin: E0_UART
-run_current: 0.800
+run_current: 0.700
 hold_current: 0.500
 stealthchop_threshold: 1000
 
@@ -189,27 +183,51 @@ shutdown_value: 0
 [include mainsail.cfg]
 
 [homing_override]
-axes: z
+axes: xz
 set_position_z: 0
 gcode:
    G90
-   G0 Z3 F600
-   G28 X Y
+   G1 Z8 F300
+   G28 Y
+   G28 X
+   G1 X61 Y122 F9000
    G28 Z
-   G0 Z10 F1800
-   SET_GCODE_OFFSET Z=-.120
+   G1 Z10 F600
+   G1 X-10 Y180 F9000
+   #SET_GCODE_OFFSET Z=0.040
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 16.521
-#*# pid_ki = 0.532
-#*# pid_kd = 128.246
+#*# pid_kp = 23.382
+#*# pid_ki = 1.006
+#*# pid_kd = 135.907
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 46.474
-#*# pid_ki = 0.550
-#*# pid_kd = 981.172
+#*# pid_kp = 65.863
+#*# pid_ki = 0.900
+#*# pid_kd = 1205.302
+#*#
+#*# [bltouch]
+#*# z_offset = 0.563
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	0.095000, 0.036250, -0.040000, -0.010000
+#*# 	0.093750, 0.051250, -0.021250, 0.016250
+#*# 	0.057500, 0.023750, -0.027500, 0.008750
+#*# 	0.000000, -0.005000, -0.047500, -0.011250
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = lagrange
+#*# y_count = 4
+#*# mesh_y_pps = 2
+#*# min_y = 0.0
+#*# x_count = 4
+#*# max_y = 150.0
+#*# mesh_x_pps = 2
+#*# max_x = 220.0
