--- a/Ender5XY/skr1_4t.cfg
+++ b/Ender5XY/skr1_4t.cfg
@@ -1,6 +1,6 @@
 ########################################
 # Board pins
-# Makerbase SGEN_L V2
+# BigTreeTech SKR 1.4 Turbo
 # LPC1789
 ########################################
 
