--- a/Ender5XY/printer.cfg
+++ b/Ender5XY/printer.cfg
@@ -47,6 +47,9 @@ speed: 100
 mesh_min: 40,0
 mesh_max: 220,150
 probe_count: 4,4
+fade_start: 1.0
+fade_end: 4.0
+
 
 ########################################
 # Stepper and Heater configuration
@@ -140,13 +143,13 @@ fan_speed: 1.0
 uart_pin: X_UART
 run_current: 0.700
 hold_current: 0.500
-#stealthchop_threshold: 1000
+stealthchop_threshold: 120
 
 [tmc2208 stepper_y]
 uart_pin: Y_UART
 run_current: 0.700
 hold_current: 0.500
-#stealthchop_threshold: 1000
+stealthchop_threshold: 120
 
 [tmc2208 stepper_z]
 uart_pin: Z_UART
@@ -158,7 +161,7 @@ stealthchop_threshold: 1000
 uart_pin: E0_UART
 run_current: 0.700
 hold_current: 0.500
-stealthchop_threshold: 1000
+#stealthchop_threshold: 1000
 
 # Display
 
@@ -194,7 +197,7 @@ gcode:
    G28 Z
    G1 Z10 F600
    G1 X-10 Y180 F9000
-   #SET_GCODE_OFFSET Z=0.040
+   SET_GCODE_OFFSET Z=-0.10
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -217,10 +220,10 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.095000, 0.036250, -0.040000, -0.010000
-#*# 	0.093750, 0.051250, -0.021250, 0.016250
-#*# 	0.057500, 0.023750, -0.027500, 0.008750
-#*# 	0.000000, -0.005000, -0.047500, -0.011250
+#*# 	  -0.012500, -0.032500, -0.098750, -0.045000
+#*# 	  0.037500, -0.002500, -0.055000, -0.008750
+#*# 	  0.030000, 0.005000, -0.048750, -0.001250
+#*# 	  -0.006250, -0.015000, -0.053750, -0.006250
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = lagrange
