--- a/Ender5XY/printer.cfg
+++ b/Ender5XY/printer.cfg
@@ -1,7 +1,7 @@
 # Based on https://3dprintbeginner.com/install-klipper-on-sidewinder-x1 
 # and https://github.com/KevinOConnor/klipper/blob/master/config/generic-mks-sgenl.cfg
 
-# Ender5 CoreXY with LPC1769 and tmc2208
+# Ender5 CoreXY with STM32 and tmc2209
 # 
 # rotation_distance = <full_steps_per_rotation> * <microsteps> / <steps_per_mm>
 # full_steps_per_rotation = 200 with 1.8degree steppers. 16 microsteps
@@ -11,10 +11,10 @@
 ########################################
 
 # import pins
-[include skr1_4t.cfg]
+[include skr_e3v1_2.cfg]
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_0D90FF06A49869AF7CE33E5EC62000F5-if00
+serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_37FFD4054247333407730157-if00
 
 [printer]
 kinematics: corexy
@@ -24,7 +24,7 @@ max_z_velocity: 5
 max_z_accel: 50
 
 [bltouch]
-sensor_pin: ^Z_MIN
+sensor_pin: ^PROBE
 control_pin: SERVO
 sample_retract_dist: 5
 x_offset: 59.0
@@ -136,28 +136,28 @@ heater_temp: 50.0
 fan_speed: 1.0
 
 ########################################
-# tmc2208 configuration
+# tmc2209 configuration
 ########################################
 
-[tmc2208 stepper_x]
+[tmc2209 stepper_x]
 uart_pin: X_UART
 run_current: 0.700
 hold_current: 0.500
 stealthchop_threshold: 120
 
-[tmc2208 stepper_y]
+[tmc2209 stepper_y]
 uart_pin: Y_UART
 run_current: 0.700
 hold_current: 0.500
 stealthchop_threshold: 120
 
-[tmc2208 stepper_z]
+[tmc2209 stepper_z]
 uart_pin: Z_UART
 run_current: 0.700
 hold_current: 0.500
 stealthchop_threshold: 1000
 
-[tmc2208 extruder]
+[tmc2209 extruder]
 uart_pin: E0_UART
 run_current: 0.700
 hold_current: 0.500
