moved macros to seperate file

--- a/Ender5XY/printer.cfg
+++ b/Ender5XY/printer.cfg
@@ -13,6 +13,9 @@
 # import pins
 [include skr_e3v1_2.cfg]
 
+# import macros
+[include macros.cfg]
+
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_37FFD4054247333407730157-if00
 
