--- a/Ender5XY/skr_e3v1_2.cfg
+++ b/Ender5XY/skr_e3v1_2.cfg
@@ -21,7 +21,7 @@ aliases:
     X_STEP = PB13, X_DIR = PB12, X_EN = PB14, X_UART = PB15,
     Y_STEP = PB10, Y_DIR = PB2, Y_EN = PB11, Y_UART = PC6,
     Z_STEP = PB0, Z_DIR = PC5, Z_EN = PB1, Z_UART = PC10,
-    E0_STEP = PB3, E0_DIR = PB4, E0_EN = PB2, E0_UART = PC11,
+    E0_STEP = PB3, E0_DIR = PB4, E0_EN = PD2, E0_UART = PC11,
     # Endstops
     X_MIN = PC0, Y_MIN = PC1, Z_MIN = PC2, E0_STOP = PC15, PROBE = PC14,
     # Sensor
@@ -29,7 +29,7 @@ aliases:
     # Heater
     HE0 = PC8, HB0 = PC9,
     # Output
-    SERVO = P2.0, FAN0 = PA8,
+    SERVO = PA1, FAN0 = PA8,
 
     # EXP1 header
     EXP1_1=PB5, EXP1_3=PA9,   EXP1_5=PA10, EXP1_7=PB8, EXP1_9=<GND>,
