improved leveling and homing

--- a/Ender5XY/printer.cfg
+++ b/Ender5XY/printer.cfg
@@ -34,22 +34,29 @@ x_offset: 59.0
 y_offset: -32.0
 #z_offset: 2.0
 
-[bed_screws]
-screw1: 30,10
+[screws_tilt_adjust]
+#screw1: 35,22
+screw1: -24.5,54
 screw1_name: front left
-screw2: 200,10
+#screw2: 200,22
+screw2: 141,54
 screw2_name: front right 
-screw3: 200,180
+#screw3: 200,187
+screw3: 141,200
 screw3_name: back right 
-screw4: 30,180
+#screw4: 35,187
+screw4: -24.5,200
 screw4_name: back left
 speed: 100.0
+screw_thread: CW-M3
 
 [bed_mesh]
-speed: 100
-mesh_min: 40,0
-mesh_max: 220,150
-probe_count: 4,4
+speed: 120
+#mesh_min: 35,35
+mesh_min: 35,0
+#mesh_max: 185,165
+mesh_max: 220,165
+probe_count: 6,5
 fade_start: 1.0
 fade_end: 4.0
 
@@ -194,18 +201,18 @@ shutdown_value: 0
 [include mainsail.cfg]
 
 [homing_override]
-axes: xz
+axes: z
 set_position_z: 0
 gcode:
    G90
-   G1 Z8 F300
-   G28 Y
+   G1 Z5 F300
    G28 X
-   G1 X61 Y122 F9000
+   G28 Y
+   # X=35+165/2-59 Y=22+165/2+35
+   G1 X58 Y139 F6000
    G28 Z
    G1 Z10 F600
-   G1 X-10 Y180 F9000
-   SET_GCODE_OFFSET Z=-0.10
+   G1 X-10 Y180 F6000
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
