--- a/Ender5XY/printer.cfg
+++ b/Ender5XY/printer.cfg
@@ -22,7 +22,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_37FFD4054247333407730157-if00
 [printer]
 kinematics: corexy
 max_velocity: 300
-max_accel: 3000
+max_accel: 1500
 max_z_velocity: 5
 max_z_accel: 50
 
@@ -86,8 +86,8 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^Y_MIN
 position_min: 0
-position_endstop: 190
-position_max: 190
+position_endstop: 200
+position_max: 200
 homing_speed: 50
 
 [stepper_z]
@@ -111,7 +111,7 @@ filament_diameter: 1.750
 heater_pin: HE0
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH0
-pressure_advance: 0.03
+pressure_advance: 0.0475
 #control: pid
 #pid_Kp: 22.2
 #pid_Ki: 1.08
@@ -140,11 +140,8 @@ max_temp: 130
 [fan]
 pin: FAN0
 
-[heater_fan coldend_fan]
-pin: HE1
-heater: extruder
-heater_temp: 50.0
-fan_speed: 1.0
+[controller_fan box_fan]
+pin: PC12
 
 ########################################
 # tmc2209 configuration
@@ -187,6 +184,7 @@ sclk_pin: EXP1_6
 sid_pin: EXP1_8
 encoder_pins: ^EXP1_5, ^EXP1_3
 click_pin: ^EXP1_2
+menu_timeout: 10
 
 ########################################
 # pins
@@ -230,22 +228,23 @@ gcode:
 #*# pid_kd = 1205.302
 #*#
 #*# [bltouch]
-#*# z_offset = 0.563
+#*# z_offset = 1.100
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.012500, -0.032500, -0.098750, -0.045000
-#*# 	  0.037500, -0.002500, -0.055000, -0.008750
-#*# 	  0.030000, 0.005000, -0.048750, -0.001250
-#*# 	  -0.006250, -0.015000, -0.053750, -0.006250
+#*# 	  -0.062500, -0.021250, -0.035000, -0.060000, -0.080000, 0.010000
+#*# 	  -0.008750, 0.007500, -0.012500, -0.031250, -0.047500, 0.036250
+#*# 	  0.016250, 0.033750, 0.012500, -0.012500, -0.036250, 0.051250
+#*# 	  0.011250, 0.021250, 0.005000, -0.016250, -0.042500, 0.033750
+#*# 	  -0.008750, 0.012500, 0.000000, -0.031250, -0.057500, 0.022500
 #*# tension = 0.2
-#*# min_x = 40.0
+#*# min_x = 35.0
 #*# algo = lagrange
-#*# y_count = 4
+#*# y_count = 5
 #*# mesh_y_pps = 2
 #*# min_y = 0.0
-#*# x_count = 4
-#*# max_y = 150.0
+#*# x_count = 6
+#*# max_y = 165.0
 #*# mesh_x_pps = 2
 #*# max_x = 220.0
