added bltouch for sw

--- a/Sidewinder/printer.cfg
+++ b/Sidewinder/printer.cfg
@@ -15,7 +15,7 @@
 [include sgenlV2.cfg]
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_0E000019C2846AAF1EA64D5EC02000F5-if00
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_12345-if00
 
 [printer]
 kinematics: cartesian
@@ -23,6 +23,14 @@ max_velocity: 200
 max_accel: 2000
 max_z_velocity: 25
 max_z_accel: 100
+
+[bltouch]
+sensor_pin: ^X_MAX
+control_pin: SERVO
+sample_retract_dist: 5
+x_offset: 59.0
+y_offset: -32.0
+z_offset: 2.0
 
 [bed_screws]
 screw1: 50,50
@@ -176,6 +184,7 @@ sclk_pin: EXP1_6
 sid_pin: EXP1_8
 encoder_pins: ^EXP1_5, ^EXP1_3
 click_pin: ^EXP1_2
+menu_timeout: 10
 
 ########################################
 # LED pins
