--- a/Sidewinder/sgenlV2.cfg
+++ b/Sidewinder/sgenlV2.cfg
@@ -19,6 +19,8 @@ aliases:
     TH0 = P0.23, TB0 = P0.24,
     # Heater
     HE0 = P2.7, HE1 = P2.4, HB0 = P2.5,
+    # Output
+    SERVO = P2.0,
 
     # EXP1 header
     EXP1_1=P1.31, EXP1_3=P0.18, EXP1_5=P0.15, EXP1_7=P1.0,  EXP1_9=<GND>,
