--- a/printer.cfg
+++ b/printer.cfg
@@ -78,9 +78,8 @@ enable_pin: !Z_EN
 microsteps: 16
 rotation_distance: 8
 endstop_pin: !Z_MIN
-position_endstop: 0.0
-position_min: -3.775
-position_endstop: -3.775
+position_min: -2
+#position_endstop: 0
 position_max: 400
 
 [stepper_z1]
@@ -97,12 +96,12 @@ dir_pin: E0_DIR
 enable_pin: !E0_EN
 microsteps: 16
 rotation_distance: 7.4067
-nozzle_diameter: 0.400
+nozzle_diameter: 0.800
 filament_diameter: 1.750
 heater_pin: HE0
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: TH0
-pressure_advance: 0.03
+#pressure_advance: 0.03
 #control: pid
 #pid_Kp: 22.2
 #pid_Ki: 1.08
@@ -227,7 +226,7 @@ gcode:
    G28 X Y
    G28 Z
    G0 Z10 F1800
-   SET_GCODE_OFFSET Z=-.140
+   SET_GCODE_OFFSET Z=0
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -246,3 +245,6 @@ gcode:
 #*#
 #*# [endstop_phase stepper_z]
 #*# trigger_phase = 54/64
+#*#
+#*# [stepper_z]
+#*# position_endstop = 0.250
