--- a/macros.cfg
+++ b/macros.cfg
@@ -61,6 +61,7 @@ gcode:
     G1 X-0.5 Y-0.5 F1200
     G1 X1 Y1 F1200
     G1 Z5 F300
+    G1 Z10 F300
     G90
     G0 X-10 Y190 F6000; present bed
     # Disable steppers
@@ -98,4 +99,9 @@ gcode:
     CLEAR_PAUSE
     SDCARD_RESET_FILE
     BASE_CANCEL_PRINT
+    
+[gcode_macro PROBE_SCREWS]
+gcode:
+    G28
+    screws_tilt_calculate
 
