--- a/bearXL.cfg
+++ b/bearXL.cfg
@@ -26,7 +26,7 @@ max_z_velocity: 25
 max_z_accel: 100
 
 [probe]
-sensor_pin: ^X_MAX
+pin: ^X_MAX
 sample_retract_dist: 5
 x_offset: 59.0
 y_offset: -32.0
@@ -79,7 +79,6 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_min: -2
-position_endstop: 0
 position_max: 400
 
 [stepper_z1]
