--- a/sidewinder.cfg
+++ b/sidewinder.cfg
@@ -51,15 +51,16 @@ speed: 100.0
 
 [stepper_x]
 step_pin: X_STEP
-dir_pin: !X_DIR
+dir_pin: X_DIR
 enable_pin: !X_EN
 microsteps: 16
-rotation_distance: 40
-endstop_pin: !X_MIN
-position_min: -5
-position_endstop: -5
-position_max: 300
-homing_speed: 50
+rotation_distance: 32
+endstop_pin: tmc2209_stepper_x:virtual_endstop
+position_min: -1
+position_endstop: -1
+position_max: 305
+homing_speed: 100
+homing_retract_dist: 0
 
 [stepper_y]
 step_pin: Y_STEP
@@ -67,11 +68,12 @@ dir_pin: !Y_DIR
 enable_pin: !Y_EN
 microsteps: 16
 rotation_distance: 40
-endstop_pin: !Y_MIN
-position_min: -5
-position_endstop: -5
-position_max: 310
-homing_speed: 50
+endstop_pin: tmc2209_stepper_y:virtual_endstop
+position_min: 0
+position_endstop: 0
+position_max: 285
+homing_speed: 100
+homing_retract_dist: 0
 
 [stepper_z]
 step_pin: Z_STEP
@@ -79,10 +81,10 @@ dir_pin: Z_DIR
 enable_pin: !Z_EN
 microsteps: 16
 rotation_distance: 8
-endstop_pin: !Z_MIN
+endstop_pin: probe:z_virtual_endstop
+homing_speed: 20
 position_min: -2
-#position_endstop: 0
-position_max: 400
+position_max: 425
 
 [stepper_z1]
 step_pin: E1_STEP
@@ -152,12 +154,16 @@ uart_pin: X_UART
 run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 1000
+driver_SGTHRS: 120
+diag_pin: ^X_MIN
 
 [tmc2209 stepper_y]
 uart_pin: Y_UART
 run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 1000
+driver_SGTHRS: 120
+diag_pin: ^Y_MIN
 
 [tmc2209 stepper_z]
 uart_pin: Z_UART
