PID Values and Rotation Distance

--- a/sidewinder.cfg
+++ b/sidewinder.cfg
@@ -96,20 +96,20 @@ rotation_distance: 8
 
 [extruder]
 step_pin: E0_STEP
-dir_pin: E0_DIR
+dir_pin: !E0_DIR
 enable_pin: !E0_EN
 microsteps: 16
-rotation_distance: 7.7
+rotation_distance: 22.8
 nozzle_diameter: 0.800
 filament_diameter: 1.750
 heater_pin: HE0
-sensor_type: EPCOS 100K B57560G104F
+sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH0
 pressure_advance: 0.045
-#control: pid
-#pid_Kp: 22.2
-#pid_Ki: 1.08
-#pid_Kd: 114
+control = pid
+pid_Kp=29.909
+pid_Ki=1.320
+pid_Kd=169.358
 smooth_time: 0.5
 min_extrude_temp: 170
 min_temp: 10
@@ -120,12 +120,12 @@ max_extrude_only_distance: 100
 heater_pin: HB0
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: TB0
-#control: pid
-#pid_Kp: 54.027
-#pid_Ki: 0.770
-#pid_Kd: 948.182
+control = pid
+pid_Kp=40.068
+pid_Ki=0.279
+pid_Kd=1436.440
 min_temp: 10
-max_temp: 130
+max_temp: 120
 
 ########################################
 # Fan configuration
