new Display 12864mini

--- a/sidewinder.cfg
+++ b/sidewinder.cfg
@@ -181,18 +181,43 @@ stealthchop_threshold: 1000
 uart_pin: E0_UART
 run_current: 0.800
 hold_current: 0.500
-stealthchop_threshold: 1000
 
-# Display
+########################################
+# Display configuration
+########################################
 
-[display]
-lcd_type: st7920
-cs_pin: EXP1_7
-sclk_pin: EXP1_6
-sid_pin: EXP1_8
-encoder_pins: ^EXP1_5, ^EXP1_3
-click_pin: ^EXP1_2
-menu_timeout: 10
+#[display] # TFT35E3 
+#lcd_type: st7920
+#cs_pin: EXP1_7
+#sclk_pin: EXP1_6
+#sid_pin: EXP1_8
+#encoder_pins: ^EXP1_5, ^EXP1_3
+#click_pin: ^EXP1_2
+#menu_timeout: 10
+
+
+[display] # BTT/FYSETC 12864mini
+lcd_type: uc1701
+cs_pin: EXP1_3
+a0_pin: EXP1_4
+rst_pin: EXP1_5
+contrast: 63
+encoder_pins: ^EXP2_5, ^EXP2_3
+click_pin: ^!EXP1_2
+## Some micro-controller boards may require an spi bus to be specified:
+#spi_bus: spi
+## Alternatively, some micro-controller boards may work with software spi:
+spi_software_miso_pin: EXP2_1
+spi_software_mosi_pin: EXP2_6
+spi_software_sclk_pin: EXP2_2
+
+[neopixel fysetc_mini12864]
+pin: EXP1_6
+chain_count: 3
+color_order: RGB
+initial_RED: 0.0
+initial_GREEN: 0.0
+initial_BLUE: 0.9
 
 ########################################
 # LED pins
