--- a/sidewinder.cfg
+++ b/sidewinder.cfg
@@ -26,24 +26,61 @@ max_accel: 1000
 max_z_velocity: 25
 max_z_accel: 100
 
+########################################
+# Probe and Leveling configuration
+########################################
+
 [bltouch]
-sensor_pin: ^X_MAX
+sensor_pin: ^Z_MAX
 control_pin: SERVO
 sample_retract_dist: 5
-x_offset: 59.0
-y_offset: -32.0
-z_offset: 2.0
+x_offset: 39.0
+y_offset: -2.0
+z_offset: 2.225
+stow_on_each_sample: False
+speed: 20
+samples: 5
+sample_retract_dist: 1
+samples_result: median
 
-[bed_screws]
-screw1: 50,50
+[homing_override]
+axes: z
+set_position_z: 0
+gcode:
+   G90
+   G0 Z5 F1200
+   G28 X Y
+   G1 X119 Y142 F9000
+   G28 Z
+   G0 Z10 F1200
+   SET_GCODE_OFFSET Z=0
+   G1 X1 Y1 F9000
+
+[screws_tilt_adjust]
+#screw1: 55,30
+screw1: 16,32
 screw1_name: front left
-screw2: 250,50
+#screw2: 255,30
+screw2: 216,32
 screw2_name: front right 
-screw3: 250,250
+#screw3: 255,230
+screw3: 216,232
 screw3_name: back right 
-screw4: 50,250
+#screw4: 55,230
+screw4: 16,232
 screw4_name: back left
-speed: 100.0
+speed: 150.0
+horizontal_move_z: 7
+screw_thread: CW-M5
+
+[bed_mesh]
+speed: 150
+mesh_min: 40,10
+mesh_max: 260,240
+probe_count: 5,5
+fade_start: 1.0
+fade_end: 4.0
+horizontal_move_z: 7
 
 ########################################
 # Stepper and Heater configuration
