--- a/sidewinder.cfg
+++ b/sidewinder.cfg
@@ -15,9 +15,11 @@
 [include boards/sgenlV2.cfg]
 # import macros
 [include macros.cfg]
+# import mainsail
+[include mainsail.cfg]
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_12345-if00
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_0E000019C2846AAF1EA64D5EC02000F5-if00
 
 [printer]
 kinematics: cartesian
@@ -175,7 +177,7 @@ pin: HE1
 pin: P1.4
 heater: extruder
 
-[heater_fan my_nozzle_fan]
+[heater_fan nozzle_fan]
 pin: P2.6
 heater: extruder
 heater_temp: 50.0
@@ -184,7 +186,6 @@ fan_speed: 1.0
 ########################################
 # TMC2209 configuration
 ########################################
-[endstop_phase]
 
 [tmc2209 stepper_x]
 uart_pin: X_UART
@@ -257,7 +258,7 @@ initial_GREEN: 0.0
 initial_BLUE: 0.9
 
 ########################################
-# LED pins
+# LED/Output pins
 ########################################
 
 [output_pin my_pin1]
@@ -284,38 +285,3 @@ shutdown_value: 1
 pin: EXP1_1
 value: 0
 shutdown_value: 0
-
-# macros
-[include mainsail.cfg]
-
-[homing_override]
-axes: z
-set_position_z: 0
-gcode:
-   G90
-   G0 Z3 F600
-   G28 X Y
-   G28 Z
-   G0 Z10 F600
-   SET_GCODE_OFFSET Z=0
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 16.209
-#*# pid_ki = 0.572
-#*# pid_kd = 114.878
-#*#
-#*# [heater_bed]
-#*# control = pid
-#*# pid_kp = 45.429
-#*# pid_ki = 0.447
-#*# pid_kd = 1155.028
-#*#
-#*# [endstop_phase stepper_z]
-#*# trigger_phase = 54/64
-#*#
-#*# [stepper_z]
-#*# position_endstop = 0.250
