--- a/ender.cfg
+++ b/ender.cfg
@@ -12,19 +12,24 @@
 
 # import pins
 [include boards/skr_e3v1_2.cfg]
-
 # import macros
 [include macros.cfg]
+# import mainsail
+[include mainsail.cfg]
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_37FFD4054247333407730157-if00
 
 [printer]
 kinematics: corexy
-max_velocity: 300
+max_velocity: 180
 max_accel: 1500
-max_z_velocity: 5
-max_z_accel: 50
+max_z_velocity: 10
+max_z_accel: 25
+
+########################################
+# Probe and Leveling configuration
+########################################
 
 [bltouch]
 sensor_pin: ^PROBE
@@ -32,8 +37,26 @@ control_pin: SERVO
 sample_retract_dist: 5
 x_offset: 59.0
 y_offset: -32.0
-#z_offset: 2.0
+z_offset: 0.225
 stow_on_each_sample: False
+speed: 20
+samples: 5
+sample_retract_dist: 1
+samples_result: median
+
+[homing_override]
+axes: z
+set_position_z: 0
+gcode:
+   G90
+   G1 Z5 F600
+   G28 X
+   G28 Y
+   # X=35+165/2-59 Y=22+165/2+35
+   G1 X58 Y139 F18000
+   G28 Z
+   G1 Z5 F600
+   G1 X-10 Y180 F18000
 
 [screws_tilt_adjust]
 #screw1: 35,22
@@ -48,11 +71,12 @@ screw3_name: back right
 #screw4: 35,187
 screw4: -24.5,200
 screw4_name: back left
-speed: 100.0
+speed: 150.0
+horizontal_move_z: 7
 screw_thread: CW-M3
 
 [bed_mesh]
-speed: 150
+speed: 250
 #mesh_min: 35,35
 mesh_min: 35,0
 #mesh_max: 185,165
@@ -60,6 +84,7 @@ mesh_max: 220,165
 probe_count: 6,6
 fade_start: 1.0
 fade_end: 4.0
+horizontal_move_z: 7
 
 
 ########################################
@@ -76,7 +101,7 @@ endstop_pin: tmc2209_stepper_x:virtual_endstop  # use the virtual end stop gener
 position_min: -27
 position_endstop: -27
 position_max: 220
-homing_speed: 50
+homing_speed: 100
 homing_retract_dist: 0
 
 [stepper_y]
@@ -89,7 +114,7 @@ endstop_pin: ^Y_MIN
 position_min: 0
 position_endstop: 200
 position_max: 200
-homing_speed: 50
+homing_speed: 100
 
 [stepper_z]
 step_pin: Z_STEP
@@ -100,6 +125,7 @@ rotation_distance: 4
 endstop_pin: probe:z_virtual_endstop
 position_min: -2
 position_max: 200
+homing_speed: 5
 
 [extruder]
 step_pin: E0_STEP
@@ -112,25 +138,25 @@ filament_diameter: 1.750
 heater_pin: HE0
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH0
-pressure_advance: 0.0475
-#control: pid
-#pid_Kp: 22.2
-#pid_Ki: 1.08
-#pid_Kd: 114
+#pressure_advance: 0.0475
+control = pid
+pid_kp = 23.382
+pid_ki = 1.006
+pid_kd = 135.907
 smooth_time: 0.5
 min_extrude_temp: 170
 min_temp: 10
 max_temp: 270
-max_extrude_only_distance: 100
+max_extrude_only_distance: 110
 
 [heater_bed]
 heater_pin: HB0
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: TB0
-#control: pid
-#pid_Kp: 54.027
-#pid_Ki: 0.770
-#pid_Kd: 948.182
+control = pid
+pid_kp = 65.863
+pid_ki = 0.900
+pid_kd = 1205.302
 min_temp: 10
 max_temp: 130
 
@@ -141,8 +167,11 @@ max_temp: 130
 [fan]
 pin: FAN0
 
-[controller_fan box_fan]
+[heater_fan nozzle_fan]
 pin: PC12
+heater: extruder
+heater_temp: 50.0
+fan_speed: 1.0
 
 ########################################
 # tmc2209 configuration
@@ -150,23 +179,23 @@ pin: PC12
 
 [tmc2209 stepper_x]
 uart_pin: X_UART
-run_current: 0.700
-hold_current: 0.500
-stealthchop_threshold: 150
-driver_SGTHRS: 120
+run_current: 1.000
+hold_current: 0.750
+stealthchop_threshold: 1000
+driver_SGTHRS: 100
 diag_pin: ^X_MIN
 
 [tmc2209 stepper_y]
 uart_pin: Y_UART
-run_current: 0.700
-hold_current: 0.500
-stealthchop_threshold: 150
+run_current: 1.000
+hold_current: 0.750
+stealthchop_threshold: 1000
 #driver_SGTHRS: 100
 #diag_pin:
 
 [tmc2209 stepper_z]
 uart_pin: Z_UART
-run_current: 0.700
+run_current: 0.800
 hold_current: 0.500
 stealthchop_threshold: 1000
 
@@ -174,11 +203,12 @@ stealthchop_threshold: 1000
 uart_pin: E0_UART
 run_current: 0.700
 hold_current: 0.500
-stealthchop_threshold: 1000
 
-# Display
+########################################
+# Display configuration
+########################################
 
-[display]
+[display] # E3 Stock Display
 lcd_type: st7920
 cs_pin: EXP1_7
 sclk_pin: EXP1_6
@@ -195,58 +225,3 @@ menu_timeout: 10
 pin: EXP1_1
 value: 0
 shutdown_value: 0
-
-# macros
-[include mainsail.cfg]
-
-[homing_override]
-axes: z
-set_position_z: 0
-gcode:
-   G90
-   G1 Z5 F300
-   G28 X
-   G28 Y
-   # X=35+165/2-59 Y=22+165/2+35
-   G1 X58 Y139 F6000
-   G28 Z
-   G1 Z10 F600
-   G1 X-10 Y180 F6000
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 23.382
-#*# pid_ki = 1.006
-#*# pid_kd = 135.907
-#*#
-#*# [heater_bed]
-#*# control = pid
-#*# pid_kp = 65.863
-#*# pid_ki = 0.900
-#*# pid_kd = 1205.302
-#*#
-#*# [bltouch]
-#*# z_offset = 1.350
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  0.008750, 0.017500, 0.012500, -0.036250, -0.022500, 0.056250
-#*# 	  0.027500, 0.038750, 0.012500, 0.012500, -0.011250, 0.076250
-#*# 	  0.043750, 0.057500, 0.032500, 0.016250, -0.010000, 0.071250
-#*# 	  0.026250, 0.042500, 0.021250, 0.005000, -0.022500, 0.075000
-#*# 	  0.023750, 0.036250, 0.012500, 0.002500, -0.022500, 0.056250
-#*# 	  -0.018750, 0.006250, -0.013750, -0.020000, -0.048750, 0.046250
-#*# tension = 0.2
-#*# min_x = 35.0
-#*# algo = lagrange
-#*# y_count = 6
-#*# mesh_y_pps = 2
-#*# min_y = 0.0
-#*# x_count = 6
-#*# max_y = 165.0
-#*# mesh_x_pps = 2
-#*# max_x = 220.0
