--- a/ender.cfg
+++ b/ender.cfg
@@ -18,7 +18,7 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-i
 
 [printer]
 kinematics: corexy
-max_velocity: 180
+max_velocity: 300
 max_accel: 1500
 max_z_velocity: 10
 max_z_accel: 25
@@ -31,13 +31,13 @@ max_z_accel: 25
 sensor_pin: ^PROBE
 control_pin: SERVO
 sample_retract_dist: 5
-x_offset: 59.0
-y_offset: -32.0
-z_offset: 0.225
+x_offset: 0.0
+y_offset: -34.0
+z_offset: 1.450
 stow_on_each_sample: False
 speed: 20
 samples: 5
-sample_retract_dist: 1
+sample_retract_dist: 0.5
 samples_result: median
 
 [homing_override]
@@ -45,39 +45,38 @@ axes: z
 set_position_z: 0
 gcode:
    G90
-   G1 Z5 F600
+   G1 Z10 F600
    G28 X
    G28 Y
-   # X=35+165/2-59 Y=22+165/2+35
-   G1 X58 Y139 F18000
+   G1 X110 Y139 F18000
    G28 Z
-   G1 Z5 F600
-   G1 X-10 Y180 F18000
+   G1 Z10 F600
+   G1 X0 Y-10 F18000
 
 [screws_tilt_adjust]
 #screw1: 35,22
-screw1: -24.5,54
+screw1: 35,56
 screw1_name: front left
 #screw2: 200,22
-screw2: 141,54
+screw2: 200,56
 screw2_name: front right 
 #screw3: 200,187
-screw3: 141,200
+screw3: 200,195
 screw3_name: back right 
 #screw4: 35,187
-screw4: -24.5,200
+screw4: 35,195
 screw4_name: back left
-speed: 150.0
+speed: 300.0
 horizontal_move_z: 7
 screw_thread: CW-M3
 
 [bed_mesh]
 speed: 250
 #mesh_min: 35,35
-mesh_min: 35,0
+mesh_min: 20,20
 #mesh_max: 185,165
-mesh_max: 220,165
-probe_count: 6,6
+mesh_max: 200,160
+probe_count: 6,5
 fade_start: 1.0
 fade_end: 4.0
 horizontal_move_z: 7
@@ -94,9 +93,10 @@ enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^X_MIN
+position_min: -30
+position_endstop: -30
 position_max: 220
 homing_speed: 100
-homing_retract_dist: 0
 
 [stepper_y]
 step_pin: Y_STEP
@@ -105,9 +105,9 @@ enable_pin: !Y_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^Y_MIN
-position_min: 0
-position_endstop: 200
-position_max: 200
+position_min: -10
+position_endstop: 195
+position_max: 195
 homing_speed: 100
 
 [stepper_z]
@@ -130,17 +130,18 @@ rotation_distance: 8.1725
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: HE0
-sensor_type: ATC Semitec 104GT-2
+#sensor_type: ATC Semitec 104GT-2
+sensor_type: PT1000
 sensor_pin: TH0
 #pressure_advance: 0.0475
 control = pid
-pid_kp = 23.382
-pid_ki = 1.006
-pid_kd = 135.907
+pid_Kp = 17.792
+pid_Ki = 0.949
+pid_Kd = 83.398
 smooth_time: 0.5
 min_extrude_temp: 170
 min_temp: 10
-max_temp: 270
+max_temp: 450
 max_extrude_only_distance: 110
 
 [heater_bed]
@@ -160,6 +161,7 @@ max_temp: 130
 
 [fan]
 pin: HE1
+off_below: 0.3
 
 [heater_fan nozzle_fan]
 pin: FAN0
