--- a/boards/skr1_4t.cfg
+++ b/boards/skr1_4t.cfg
@@ -14,7 +14,8 @@ aliases:
     E1_STEP = P1.15, E1_DIR = P1.14, E1_EN = P1.16, E1_UART = P1.1,
     # Endstops
     X_MIN = P1.29, Y_MIN = P1.28, Z_MIN = P1.27, 
-    X_MAX = P1.26, Y_MAX = P1.25, Z_MAX = P1.1, 
+    X_MAX = P1.26, Y_MAX = P1.25, Z_MAX = P1.0, 
+    PROBE = P0.10,
     # Sensor
     TH0 = P0.24, TB0 = P0.25, TH1 = P0.23,
     # Heater
