--- a/ender.cfg
+++ b/ender.cfg
@@ -19,9 +19,9 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-i
 [printer]
 kinematics: corexy
 max_velocity: 300
-max_accel: 1500
+max_accel: 1000
 max_z_velocity: 10
-max_z_accel: 25
+max_z_accel: 20
 
 ########################################
 # Probe and Leveling configuration
@@ -33,9 +33,9 @@ control_pin: SERVO
 sample_retract_dist: 5
 x_offset: 0.0
 y_offset: -34.0
-z_offset: 1.450
+z_offset: 1.400
 stow_on_each_sample: False
-speed: 20
+speed: 10
 samples: 5
 sample_retract_dist: 0.5
 samples_result: median
@@ -76,7 +76,7 @@ speed: 250
 mesh_min: 20,20
 #mesh_max: 185,165
 mesh_max: 200,160
-probe_count: 6,5
+probe_count: 5,4
 fade_start: 1.0
 fade_end: 4.0
 horizontal_move_z: 7
@@ -133,7 +133,7 @@ heater_pin: HE0
 #sensor_type: ATC Semitec 104GT-2
 sensor_type: PT1000
 sensor_pin: TH0
-#pressure_advance: 0.0475
+pressure_advance: 0.045
 control = pid
 pid_Kp = 17.792
 pid_Ki = 0.949
@@ -191,8 +191,8 @@ hold_current: 0.750
 
 [tmc2208 stepper_z]
 uart_pin: Z_UART
-run_current: 1.000
-hold_current: 0.700
+run_current: 0.700
+hold_current: 0.500
 stealthchop_threshold: 1000
 
 [tmc2208 extruder]
