updated accel and velocity

--- a/caribouXL.cfg
+++ b/caribouXL.cfg
@@ -20,10 +20,15 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1769_0E000019C2846AAF1EA64D5EC02000F5-i
 
 [printer]
 kinematics: cartesian
-max_velocity: 150
-max_accel: 1000
-max_z_velocity: 10
-max_z_accel: 20
+max_velocity: 200
+max_accel: 3000
+max_z_velocity: 20
+max_z_accel: 300
+
+[input_shaper]
+shaper_freq_x: 50
+shaper_freq_y: 50
+shaper_type: 2hump_ei
 
 ########################################
 # Probe and Leveling configuration
@@ -31,13 +36,12 @@ max_z_accel: 20
 
 [probe]
 pin: ^Z_MAX
-sample_retract_dist: 2
 x_offset: 24
 y_offset: 5
-z_offset: 0.5
+z_offset: 1.2
 speed: 10
 samples: 5
-sample_retract_dist: 0.5
+sample_retract_dist: 0.3
 samples_result: median
 
 [homing_override]
@@ -71,13 +75,13 @@ horizontal_move_z: 5
 screw_thread: CW-M5
 
 [bed_mesh]
-speed: 150
+speed: 300
 mesh_min: 30,30
 mesh_max: 275,275
 probe_count: 5,5
 fade_start: 1.0
 fade_end: 4.0
-horizontal_move_z: 7
+horizontal_move_z: 5
 
 ########################################
 # Stepper and Heater configuration
