--- a/caribouXL.cfg
+++ b/caribouXL.cfg
@@ -284,3 +284,9 @@ shutdown_value: 1
 pin: EXP1_1
 value: 0
 shutdown_value: 0
+
+[filament_switch_sensor filsense]
+pause_on_runout: True
+event_delay: 3.0
+pause_delay: 0.5
+switch_pin: !Y_MAX
