--- a/printer.cfg
+++ b/printer.cfg
@@ -3,7 +3,6 @@
 ########################################
 
 # import correct printer.cfg
-#[include ender.cfg]
-#[include sidewinder.cfg]
-#[include bearXL.cfg]
 #[include caribouXL.cfg]
+#[include hevort.cfg]
+#[include artist.cfg]
