--- a/moonraker.conf
+++ b/moonraker.conf
@@ -3,6 +3,7 @@ host: 0.0.0.0
 port: 7125
 enable_debug_logging: True
 config_path: ~/klipper_config
+log_path: /home/gerald/klipper_logs
 klippy_uds_address: /tmp/klippy_uds
 
 [authorization]
