--- a/boards/robin_pro.cfg
+++ b/boards/robin_pro.cfg
@@ -14,7 +14,7 @@ aliases:
     E1_STEP = PA6, E1_DIR = PA1, E1_EN = PA3, E1_UART = PG12,
     E2_STEP = PF2, E2_DIR = PF1, E2_EN = PF0, E2_UART = PC13,
     # Endstops
-    X_MIN = PA15, Y_MIN = RA12, Z_MIN = PA11, 
+    X_MIN = PA15, Y_MIN = PA12, Z_MIN = PA11, 
     X_MAX = PG7, Y_MAX = PG8, Z_MAX = PC4,
     MT_DET1 = PA4, MT_DET2 = PE6, MT_DET3 = PG14,
     PW_DET = PA2, PW_OFF = PG11, 
