--- a/macros.cfg
+++ b/macros.cfg
@@ -2,11 +2,11 @@
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
-default_parameter_X: 0    #edit to your park position
-default_parameter_Y: 180    #edit to your park position
-default_parameter_Z: 10     #edit to your park position
-default_parameter_E: 1      #edit to your retract length
 gcode:
+	{% set X = params.X|default(0)|float %}
+    {% set Y = params.Y|default(305)|float %}
+    {% set Z = params.Z|default(10)|float %}
+    {% set E = params.Z|default(1)|float %}
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
     G91
@@ -17,9 +17,9 @@ gcode:
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
-default_parameter_E: 1      #edit to your retract length
 gcode:
-    G91
+    {% set E = params.Z|default(1)|float %}
+	G91
     G1 E{E} F2100
     G90
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
