--- a/artist.cfg
+++ b/artist.cfg
@@ -2,6 +2,18 @@
 
 # Artist-D (310x310x400 IDEX) with STM32F1 and TMC2209
 
+# This file contains common pin mappings for MKS Robin Nano (v1.2.004)
+# boards. To use this config, the firmware should be compiled for the
+# STM32F103. When running "make menuconfig", enable "extra low-level
+# configuration setup", select the 28KiB bootloader, disable "USB for
+# communication", and select USART3 for the "Serial Port".
+
+# Note that the "make flash" command does not work with MKS Robin
+# boards. After running "make", run the following command:
+#   ./scripts/update_mks_robin.py out/klipper.bin out/Robin_nano.bin
+# Copy the file out/Robin_nano.bin to an SD card and then restart the
+# printer with that SD card.
+
 ########################################
 # MCU and Printer configuration
 ########################################
@@ -16,7 +28,8 @@
 [include mainsail.cfg]
 
 [mcu]
-serial: /dev/serial/by-id/xxxx
+serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
+restart_method: command
 
 [printer]
 kinematics: cartesian
@@ -36,23 +49,58 @@ screw4: 40,270
 screw4_name: back left
 speed: 100.0
 
+########################################
+# Stepper and Heater configuration
+########################################
+
 [stepper_x]
 step_pin: X_STEP
 dir_pin: X_DIR
 enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
-endstop_pin: X_MIN
+endstop_pin: !X_MIN
 position_min: -69.5
 position_endstop: -69.5
 position_max: 310
 homing_speed: 50
 
-[tmc2209 stepper_x]
-uart_pin: X_UART
-run_current: 0.500
-hold_current: 0.400
-stealthchop_threshold: 1000
+[dual_carriage]
+axis: x
+step_pin: E2_STEP
+dir_pin: E2_DIR
+enable_pin: !E2_EN
+microsteps: 16
+rotation_distance: 40
+endstop_pin: !X_MAX
+position_min: 0
+position_endstop: 200
+position_max: 200
+homing_speed: 50
+
+[stepper_y]
+step_pin: Y_STEP
+dir_pin: Y_DIR
+enable_pin: !Y_EN
+microsteps: 16
+rotation_distance: 40
+endstop_pin: !Y_MIN
+position_min: -9
+position_endstop: -9
+position_max: 305
+homing_speed: 100
+
+[stepper_z]
+step_pin: Z_STEP
+dir_pin: Z_DIR
+enable_pin: !Z_EN
+microsteps: 16
+rotation_distance: 8
+endstop_pin: !Z_MIN
+position_min: -2
+position_endstop: 0
+position_max: 350
+homing_speed: 5
 
 [extruder]
 step_pin: E0_STEP
@@ -72,26 +120,6 @@ pid_Kd: 114
 min_temp: 0
 max_temp: 250
 
-# Definition for the secondary carriage and extruder1
-[dual_carriage]
-axis: x
-step_pin: E2_STEP
-dir_pin: E2_DIR
-enable_pin: !E2_EN
-microsteps: 16
-rotation_distance: 40
-endstop_pin: X_MAX
-position_min: 0
-position_endstop: 200
-position_max: 200
-homing_speed: 50
-
-[tmc2209 dual_carriage]
-uart_pin: E2_UART
-run_current: 0.500
-hold_current: 0.400
-stealthchop_threshold: 1000
-
 [extruder1]
 step_pin: E1_STEP
 dir_pin: E1_DIR
@@ -110,17 +138,26 @@ pid_Kd: 114
 min_temp: 0
 max_temp: 250
 
-[stepper_y]
-step_pin: Y_STEP
-dir_pin: Y_DIR
-enable_pin: !Y_EN
-microsteps: 16
-rotation_distance: 40
-endstop_pin: Y_MIN
-position_min: -9
-position_endstop: -9
-position_max: 305
-homing_speed: 100
+[heater_bed]
+heater_pin: HB0
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: TB0
+control = pid
+pid_Kp=40.068
+pid_Ki=0.279
+pid_Kd=1436.440
+min_temp: 10
+max_temp: 120
+
+########################################
+# TMC220x configuration
+########################################
+
+[tmc2209 stepper_x]
+uart_pin: X_UART
+run_current: 0.500
+hold_current: 0.400
+stealthchop_threshold: 1000
 
 [tmc2209 stepper_y]
 uart_pin: Y_UART
@@ -128,19 +165,24 @@ run_current: 0.500
 hold_current: 0.400
 stealthchop_threshold: 1000
 
-[stepper_z]
-step_pin: Z_STEP
-dir_pin: !Z_DIR
-enable_pin: !Z_EN
-microsteps: 16
-rotation_distance: 4
-endstop_pin: Z_MIN
-position_min: -2
-position_max: 350
-homing_speed: 5
-
-[tmc2209 stepper_Z]
+[tmc2209 stepper_z]
 uart_pin: Z_UART
+run_current: 0.500
+hold_current: 0.400
+stealthchop_threshold: 1000
+
+[tmc2208 extruder]
+uart_pin: E0_UART
+run_current: 0.500
+hold_current: 0.400
+
+[tmc2208 extruder1]
+uart_pin: E1_UART
+run_current: 0.500
+hold_current: 0.400
+
+[tmc2209 dual_carriage]
+uart_pin: E2_UART
 run_current: 0.500
 hold_current: 0.400
 stealthchop_threshold: 1000
