updates from tuning

--- a/macros_idex.cfg
+++ b/macros_idex.cfg
@@ -3,9 +3,12 @@
 gcode:
     SAVE_GCODE_STATE NAME=park0
     G91
+    {% if printer.extruder.temperature > 180 %}
+    G1 E-2 F1800
+    {% endif %}
     G1 Z5
     G90
-    G1 X-60
+    G1 X-65 F6000
     G91
     G1 Z-5
     RESTORE_GCODE_STATE NAME=park0
@@ -13,25 +16,53 @@ gcode:
 # Activate the primary extruder
 [gcode_macro T0]
 gcode:
+    SAVE_GCODE_STATE NAME=activate0
     PARK_{printer.toolhead.extruder}
     ACTIVATE_EXTRUDER EXTRUDER=extruder
     SET_DUAL_CARRIAGE CARRIAGE=0
+    SET_GCODE_OFFSET X=0
     SET_GCODE_OFFSET Y=0
+    SET_GCODE_OFFSET Z=0
+    {% if printer.extruder.temperature > 180 %}
+    G91
+    G1 E2 F1800
+    {% endif %}
+    G90
+    G1 X-65 F3000
+    G1 X-40 F3000
+    G1 X-65 F3000
+    RESTORE_GCODE_STATE NAME=activate0
+
 
 [gcode_macro PARK_extruder1]
 gcode:
     SAVE_GCODE_STATE NAME=park1
     G91
+    {% if printer.extruder1.temperature > 180 %}
+    G1 E-2 F1800
+    {% endif %}
     G1 Z5
     G90
-    G1 X350
+    G1 X370 F6000
     G91
     G1 Z-5
     RESTORE_GCODE_STATE NAME=park1
 
 [gcode_macro T1]
 gcode:
+    SAVE_GCODE_STATE NAME=activate1
     PARK_{printer.toolhead.extruder}
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
     SET_DUAL_CARRIAGE CARRIAGE=1
-    SET_GCODE_OFFSET Y=0.5
+    SET_GCODE_OFFSET X=0
+    SET_GCODE_OFFSET Y=1.2
+    SET_GCODE_OFFSET Z=-0.15
+    {% if printer.extruder1.temperature > 180 %}
+    G91
+    G1 E2 F1800
+    {% endif %}
+    G90
+    G1 X370 F3000
+    G1 X345 F3000
+    G1 X370 F3000
+    RESTORE_GCODE_STATE NAME=activate1
