--- a/artist.cfg
+++ b/artist.cfg
@@ -49,6 +49,17 @@ screw4: 40,270
 screw4_name: back left
 speed: 100.0
 
+[homing_override]
+axes: z
+set_position_z: 0
+gcode:
+   G90
+   G1 Z10 F600
+   G28 X
+   G28 Y
+   G28 Z
+   G1 Z10 F600
+
 ########################################
 # Stepper and Heater configuration
 ########################################
@@ -74,8 +85,8 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: !X_MAX
 position_min: 0
-position_endstop: 200
-position_max: 200
+position_endstop: 377
+position_max: 377
 homing_speed: 50
 
 [stepper_y]
@@ -98,7 +109,7 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: !Z_MIN
 position_min: -2
-position_endstop: 0
+position_endstop: -1.6
 position_max: 350
 homing_speed: 5
 
@@ -107,36 +118,38 @@ step_pin: E0_STEP
 dir_pin: E0_DIR
 enable_pin: !E0_EN
 microsteps: 16
-rotation_distance: 8
+rotation_distance: 7.8
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: HE0
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH0
 control: pid
-pid_Kp: 22.2
-pid_Ki: 1.08
-pid_Kd: 114
+pid_Kp: 28.002
+pid_Ki: 1.287
+pid_Kd: 152.263
 min_temp: 0
 max_temp: 250
+max_extrude_only_distance: 100.0
 
 [extruder1]
 step_pin: E1_STEP
-dir_pin: E1_DIR
+dir_pin: !E1_DIR
 enable_pin: !E1_EN
 microsteps: 16
-rotation_distance: 8
+rotation_distance: 7.8
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: HE1
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH1
 control: pid
-pid_Kp: 22.2
-pid_Ki: 1.08
-pid_Kd: 114
+pid_Kp: 28.002
+pid_Ki: 1.287
+pid_Kd: 152.263
 min_temp: 0
 max_temp: 250
+max_extrude_only_distance: 100.0
 
 [heater_bed]
 heater_pin: HB0
