added hevort subdir

--- a/printer.cfg
+++ b/printer.cfg
@@ -4,5 +4,5 @@
 
 # import correct printer.cfg
 #[include caribouXL.cfg]
-#[include hevort.cfg]
+#[include hevort/printer.cfg]
 #[include artist.cfg]
