--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -8,11 +8,11 @@
 ########################################
 
 # import pins
-[include boards/skr1_4t.cfg]
+[include ../boards/skr1_4t.cfg]
 # import macros
-[include macros.cfg]
+[include ../macros.cfg]
 # import mainsail
-[include mainsail.cfg]
+[include ../mainsail.cfg]
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_1EE0001568944BAFCEB77D5DC12000F5-if00
@@ -21,7 +21,6 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1769_1EE0001568944BAFCEB77D5DC12000F5-i
 kinematics: corexy
 max_velocity: 1000
 max_accel: 10000
-max_z_velocity: 10
 max_z_accel: 20
 
 ########################################
@@ -35,10 +34,6 @@ enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^X_MIN
-position_min: 0
-position_endstop: 0
-position_max: 500
-homing_speed: 20
 
 [stepper_y]
 step_pin: Y_STEP
@@ -49,20 +44,6 @@ rotation_distance: 40
 endstop_pin: Y_MIN
 position_min: -10
 position_endstop: -10
-position_max: 500
-homing_speed: 20
-
-[stepper_z]
-step_pin: Z_STEP
-dir_pin: !Z_DIR
-enable_pin: !Z_EN
-microsteps: 16
-rotation_distance: 4
-endstop_pin: ^Z_MIN
-position_min: -2
-position_endstop: 0
-position_max: 200
-homing_speed: 5
 
 [extruder]
 step_pin: E0_STEP
@@ -72,7 +53,6 @@ microsteps: 16
 rotation_distance: 8.1725
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: HE0
 sensor_type: ATC Semitec 104GT-2
 #sensor_type: PT1000
 sensor_pin: TH0
@@ -103,11 +83,9 @@ max_temp: 130
 ########################################
 
 [fan]
-pin: HE1
 off_below: 0.3
 
 [heater_fan nozzle_fan]
-pin: FAN0
 heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
