setup x and y and heater

--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -34,6 +34,10 @@ enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^X_MIN
+position_min: -10
+position_endstop: -10
+position_max: 525
+homing_speed: 100
 
 [stepper_y]
 step_pin: Y_STEP
@@ -44,6 +48,8 @@ rotation_distance: 40
 endstop_pin: Y_MIN
 position_min: -10
 position_endstop: -10
+position_max: 525
+homing_speed: 100
 
 [extruder]
 step_pin: E0_STEP
@@ -53,6 +59,7 @@ microsteps: 16
 rotation_distance: 8.1725
 nozzle_diameter: 0.400
 filament_diameter: 1.750
+heater_pin: HE1
 sensor_type: ATC Semitec 104GT-2
 #sensor_type: PT1000
 sensor_pin: TH0
@@ -83,9 +90,11 @@ max_temp: 130
 ########################################
 
 [fan]
+pin: FAN0
 off_below: 0.3
 
 [heater_fan nozzle_fan]
+pin: HE0
 heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
