--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -17,10 +17,13 @@
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_1EE0001568944BAFCEB77D5DC12000F5-if00
 
+[include bed.cfg]
+
 [printer]
 kinematics: corexy
 max_velocity: 1000
 max_accel: 10000
+max_z_velocity: 50
 max_z_accel: 20
 
 ########################################
