probe bed_mesh and z_tilt adjustments

--- a/hevort/bed.cfg
+++ b/hevort/bed.cfg
@@ -16,7 +16,7 @@ full_steps_per_rotation: 200
 endstop_pin: probe:z_virtual_endstop
 position_max: 300
 position_min: -20
-homing_speed: 20
+homing_speed: 10
 homing_retract_speed: 5
 second_homing_speed: 2.5
 
@@ -62,11 +62,11 @@ hold_current: 0.750
 sensor_pin: ^zboard:P0.10	# ^ = Activate pullup resistor to avoid floating input
 control_pin: zboard:P2.0		# ! = Active low
 x_offset: -32
-y_offset: 0
-z_offset: 3
-speed: 10
+y_offset: -2
+z_offset: 0.650
+speed: 5
 samples: 2
-#sample_retract_dist: 5 
+sample_retract_dist: 5 
 #samples_tolerance: 0.010
 
 [homing_override]
@@ -82,6 +82,15 @@ gcode:
    G1 Z10 F600
    G1 X0 Y-10 F18000
 
+[bed_mesh]
+speed: 300
+mesh_min: 25,25
+mesh_max: 250,250
+probe_count: 3,3
+fade_start: 1.0
+fade_end: 4.0
+horizontal_move_z: 5
+
 #__________________ SELF LEVELLING (Z_Tilt) _______________________
 [z_tilt]
 z_positions: 
@@ -90,12 +99,12 @@ z_positions:
   575.548,-20.4
 
 points:
-	50,50
-	50,450
-	450,450
-	450,50
+	50,15
+	50,515
+	515,515
+	515,15
 speed: 200
-horizontal_move_z: 25
+horizontal_move_z: 20
 
 #retries: 0
 #   Number of times to retry if the probed points aren't within
