extruder and fan adjustments

--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -58,15 +58,16 @@ homing_speed: 100
 step_pin: E0_STEP
 dir_pin: !E0_DIR
 enable_pin: !E0_EN
-microsteps: 16
-rotation_distance: 8.1725
+microsteps: 8
+rotation_distance: 23.56
+gear_ratio: 50:10
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: HE1
 sensor_type: ATC Semitec 104GT-2
 #sensor_type: PT1000
 sensor_pin: TH0
-pressure_advance: 0.045
+pressure_advance: 0.060
 control = pid
 pid_Kp = 17.792
 pid_Ki = 0.949
@@ -76,6 +77,12 @@ min_extrude_temp: 170
 min_temp: 10
 max_temp: 450
 max_extrude_only_distance: 110
+
+[tmc2209 extruder]
+uart_pin: E0_UART
+run_current: 0.500
+hold_current: 0.400
+interpolate: False
 
 [heater_bed]
 heater_pin: HB0
@@ -93,7 +100,7 @@ max_temp: 130
 ########################################
 
 [fan]
-pin: FAN0
+pin: zboard:P2.4
 off_below: 0.3
 
 [heater_fan nozzle_fan]
