moved heater_bed to bed.cfg

--- a/hevort/bed.cfg
+++ b/hevort/bed.cfg
@@ -116,3 +116,14 @@ horizontal_move_z: 20
 #   more points than steppers then you will likely have a fixed
 #   minimum value for the range of probed points which you can learn
 #   by observing command output.
+
+[heater_bed]
+heater_pin: zboard:P2.3
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: zboard:P0.25
+control = pid
+pid_kp = 65.863
+pid_ki = 0.900
+pid_kd = 1205.302
+min_temp: 10
+max_temp: 130
