updated macros added endstop phase

--- a/artist.cfg
+++ b/artist.cfg
@@ -64,6 +64,8 @@ gcode:
 # Stepper and Heater configuration
 ########################################
 
+[endstop_phase]
+
 [stepper_x]
 step_pin: X_STEP
 dir_pin: X_DIR
@@ -75,6 +77,9 @@ position_min: -69.5
 position_endstop: -69.5
 position_max: 310
 homing_speed: 50
+
+[endstop_phase stepper_x]
+trigger_phase = 51/64
 
 [dual_carriage]
 axis: x
@@ -89,6 +94,9 @@ position_endstop: 377
 position_max: 377
 homing_speed: 50
 
+[endstop_phase dual_carriage]
+trigger_phase = 21/64
+
 [stepper_y]
 step_pin: Y_STEP
 dir_pin: Y_DIR
@@ -101,6 +109,9 @@ position_endstop: -9
 position_max: 305
 homing_speed: 100
 
+[endstop_phase stepper_y]
+trigger_phase = 36/64
+
 [stepper_z]
 step_pin: Z_STEP
 dir_pin: Z_DIR
@@ -112,6 +123,9 @@ position_min: -2
 position_endstop: -1.6
 position_max: 350
 homing_speed: 5
+
+[endstop_phase stepper_z]
+trigger_phase = 29/64
 
 [extruder]
 step_pin: E0_STEP
@@ -168,36 +182,36 @@ max_temp: 120
 
 [tmc2209 stepper_x]
 uart_pin: X_UART
-run_current: 0.500
-hold_current: 0.400
+run_current: 0.700
+hold_current: 0.500
 stealthchop_threshold: 1000
 
 [tmc2209 stepper_y]
 uart_pin: Y_UART
-run_current: 0.500
-hold_current: 0.400
+run_current: 0.700
+hold_current: 0.500
 stealthchop_threshold: 1000
 
 [tmc2209 stepper_z]
 uart_pin: Z_UART
-run_current: 0.500
-hold_current: 0.400
+run_current: 0.700
+hold_current: 0.500
 stealthchop_threshold: 1000
 
 [tmc2208 extruder]
 uart_pin: E0_UART
-run_current: 0.500
+run_current: 0.600
 hold_current: 0.400
 
 [tmc2208 extruder1]
 uart_pin: E1_UART
-run_current: 0.500
+run_current: 0.600
 hold_current: 0.400
 
 [tmc2209 dual_carriage]
 uart_pin: E2_UART
-run_current: 0.500
-hold_current: 0.400
+run_current: 0.700
+hold_current: 0.500
 stealthchop_threshold: 1000
 
 ########################################
