added missing fans and thermistor

--- a/boards/sgenlV2.cfg
+++ b/boards/sgenlV2.cfg
@@ -16,9 +16,11 @@ aliases:
     X_MIN = P1.29, Y_MIN = P1.27, Z_MIN = P1.25, 
     X_MAX = P1.28, Y_MAX = P1.26, Z_MAX = P1.24, 
     # Sensor
-    TH0 = P0.23, TB0 = P0.24,
+    TH0 = P0.23, TB0 = P0.24, TH1 = P0.25,
     # Heater
-    HE0 = P2.7, HE1 = P2.4, HB0 = P2.5,
+    HE0 = P2.7, HE1 = P2.6, HB0 = P2.5,
+    # Fan
+    FAN0 = P1.4, FAN1 = P2.4,
     # Output
     SERVO = P2.0,
 
