temperature controlled fan for mcu

--- a/caribouXL.cfg
+++ b/caribouXL.cfg
@@ -38,7 +38,7 @@ shaper_type: 2hump_ei
 pin: ^Z_MAX
 x_offset: 24
 y_offset: 5
-z_offset: 1.2
+z_offset: 1.25
 speed: 10
 samples: 5
 sample_retract_dist: 0.3
@@ -107,9 +107,9 @@ enable_pin: !Y_EN
 microsteps: 16
 rotation_distance: 32
 endstop_pin: tmc2209_stepper_y:virtual_endstop
-position_min: -25
-position_endstop: -25
-position_max: 310
+position_min: -30
+position_endstop: -30
+position_max: 305
 homing_speed: 100
 homing_retract_dist: 0
 
@@ -170,14 +170,24 @@ max_temp: 120
 ########################################
 
 [fan]
-pin: HE1
+pin: FAN0
 
-[controller_fan box_fan]
-pin: P1.4
-heater: extruder
+[temperature_fan my_temp_fan]
+pin: FAN1
+max_power: 0.75
+shutdown_speed: 0
+kick_start_time: 1
+off_below: 0.25
+sensor_type: Generic 3950
+sensor_pin: TH1
+control: watermark
+max_delta: 2
+target_temp: 30.0
+min_temp: 0
+max_temp: 100
 
 [heater_fan nozzle_fan]
-pin: P2.6
+pin: HE1
 heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
