--- a/printer.cfg
+++ b/printer.cfg
@@ -3,6 +3,28 @@
 ########################################
 
 # import correct printer.cfg
-#[include caribouXL.cfg]
+[include caribouXL.cfg]
 #[include hevort/printer.cfg]
 #[include artist.cfg]
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.027500, 0.030000, 0.025000, -0.017500, -0.180000
+#*# 	  0.022500, 0.050000, 0.067500, 0.050000, -0.070000
+#*# 	  -0.025000, 0.060000, 0.092500, 0.112500, 0.030000
+#*# 	  -0.125000, 0.010000, 0.077500, 0.105000, 0.080000
+#*# 	  -0.205000, -0.050000, 0.040000, 0.080000, 0.090000
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# algo = lagrange
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 30.0
+#*# x_count = 5
+#*# max_y = 275.0
+#*# mesh_x_pps = 2
+#*# max_x = 275.0
