--- a/caribouXL.cfg
+++ b/caribouXL.cfg
@@ -75,7 +75,7 @@ horizontal_move_z: 5
 screw_thread: CW-M5
 
 [bed_mesh]
-speed: 300
+speed: 180
 mesh_min: 30,30
 mesh_max: 275,275
 probe_count: 5,5
@@ -172,7 +172,7 @@ max_temp: 120
 [fan]
 pin: FAN0
 
-[temperature_fan my_temp_fan]
+[temperature_fan case_fan]
 pin: FAN1
 max_power: 0.75
 shutdown_speed: 0
@@ -181,7 +181,7 @@ off_below: 0.25
 sensor_type: Generic 3950
 sensor_pin: TH1
 control: watermark
-max_delta: 2
+max_delta: 3
 target_temp: 30.0
 min_temp: 0
 max_temp: 100
