--- a/hevort/bed.cfg
+++ b/hevort/bed.cfg
@@ -4,6 +4,7 @@
 
 [mcu zboard]
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
+restart_method: command
 
 [stepper_z]
 step_pin: zboard:P2.2
@@ -14,7 +15,7 @@ rotation_distance: 4
 full_steps_per_rotation: 200
 #gear_ratio: 5.18:1
 endstop_pin: probe:z_virtual_endstop
-position_max: 300
+position_max: 315
 position_min: -20
 homing_speed: 10
 homing_retract_speed: 5
@@ -64,10 +65,11 @@ control_pin: zboard:P2.0		# ! = Active low
 x_offset: -32
 y_offset: -2
 z_offset: 0.650
+stow_on_each_sample: False
 speed: 5
-samples: 2
-sample_retract_dist: 5 
-#samples_tolerance: 0.010
+samples: 5
+sample_retract_dist: 1
+samples_result: median
 
 [homing_override]
 axes: z
@@ -77,16 +79,16 @@ gcode:
    G1 Z10 F600
    G28 X
    G28 Y
-   G1 X110 Y139 F18000
+   G1 X150 Y150 F18000
    G28 Z
    G1 Z10 F600
    G1 X0 Y-10 F18000
 
 [bed_mesh]
 speed: 300
-mesh_min: 25,25
-mesh_max: 250,250
-probe_count: 3,3
+mesh_min: 15,15
+mesh_max: 460,460
+probe_count: 6,6
 fade_start: 1.0
 fade_end: 4.0
 horizontal_move_z: 5
@@ -99,10 +101,9 @@ z_positions:
   575.548,-20.4
 
 points:
-	50,15
-	50,515
-	515,515
-	515,15
+	40,15
+	255,525
+	525,15
 speed: 200
 horizontal_move_z: 20
 
