--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -1,7 +1,7 @@
 # Based on https://github.com/KevinOConnor/klipper/blob/master/config
 
 # HevORT CoreXY SKR1.4
-# JMC Servos on X and Y. Need increased Step-Pulse-Duration. Set in make menuconfig.
+# JMC Servos on X and Y. Need increased Step-Pulse-Duration.
 
 ########################################
 # MCU and Printer configuration
@@ -16,6 +16,7 @@
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_1EE0001568944BAFCEB77D5DC12000F5-if00
+restart_method: command
 
 [include bed.cfg]
 
@@ -37,10 +38,11 @@ enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^X_MIN
-position_min: -10
-position_endstop: -10
+position_min: -1
+position_endstop: 0
 position_max: 525
 homing_speed: 100
+step_pulse_duration: 0.000003
 
 [stepper_y]
 step_pin: Y_STEP
@@ -51,8 +53,9 @@ rotation_distance: 40
 endstop_pin: Y_MIN
 position_min: -10
 position_endstop: -10
-position_max: 525
+position_max: 550
 homing_speed: 100
+step_pulse_duration: 0.000003
 
 [extruder]
 step_pin: E0_STEP
@@ -69,9 +72,9 @@ sensor_type: ATC Semitec 104GT-2
 sensor_pin: TH0
 pressure_advance: 0.060
 control = pid
-pid_Kp = 17.792
-pid_Ki = 0.949
-pid_Kd = 83.398
+pid_Kp = 25.389
+pid_Ki = 1.209
+pid_Kd = 133.291
 smooth_time: 0.5
 min_extrude_temp: 170
 min_temp: 10
@@ -96,7 +99,7 @@ off_below: 0.3
 pin: HE0
 heater: extruder
 heater_temp: 50.0
-fan_speed: 1.0
+fan_speed: 0.80
 
 ########################################
 # Display configuration
