--- a/boards/skr1_4t.cfg
+++ b/boards/skr1_4t.cfg
@@ -21,7 +21,7 @@ aliases:
     # Heater
     HE0 = P2.7, HE1 = P2.4, HB0 = P2.5,
     # Output
-    SERVO = P2.0, FAN0 = P2.3, LED = 1.24,
+    SERVO = P2.0, FAN0 = P2.3, LED = P1.24,
 
     # EXP1 header
     EXP1_1=P1.30, EXP1_3=P1.18, EXP1_5=P1.20, EXP1_7=P1.22, EXP1_9=<GND>,
