--- a/macros.cfg
+++ b/macros.cfg
@@ -6,7 +6,7 @@ gcode:
 	{% set X = params.X|default(0)|float %}
     {% set Y = params.Y|default(305)|float %}
     {% set Z = params.Z|default(10)|float %}
-    {% set E = params.Z|default(1)|float %}
+    {% set E = params.E|default(1)|float %}
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
     G91
@@ -18,7 +18,7 @@ gcode:
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
 gcode:
-    {% set E = params.Z|default(1)|float %}
+    {% set E = params.E|default(1)|float %}
 	G91
     G1 E{E} F2100
     G90
