added HevORT specific macros

--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -11,6 +11,7 @@
 [include ../boards/skr1_4t.cfg]
 # import macros
 [include ../macros.cfg]
+[include macros.cfg]
 # import mainsail
 [include ../mainsail.cfg]
 
