--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -16,9 +16,10 @@
 [include ../mainsail.cfg]
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_1EE0001568944BAFCEB77D5DC12000F5-if00
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
 restart_method: command
 
+# import bed
 [include bed.cfg]
 
 [printer]
@@ -67,9 +68,9 @@ rotation_distance: 23.56
 gear_ratio: 50:10
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: HE1
-sensor_type: ATC Semitec 104GT-2
-#sensor_type: PT1000
+heater_pin: HE0
+#sensor_type: ATC Semitec 104GT-2
+sensor_type: PT1000
 sensor_pin: TH0
 pressure_advance: 0.060
 control = pid
@@ -93,11 +94,11 @@ interpolate: False
 ########################################
 
 [fan]
-pin: zboard:P2.4
-off_below: 0.3
+pin: LED
+off_below: 0.1
 
 [heater_fan nozzle_fan]
-pin: HE0
+pin: FAN0
 heater: extruder
 heater_temp: 50.0
 fan_speed: 0.80
