moved servos in seperate config

--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -19,6 +19,8 @@
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
 restart_method: command
 
+# import x and y axis
+[include servos.cfg]
 # import bed
 [include bed.cfg]
 
@@ -32,32 +34,6 @@ max_z_accel: 20
 ########################################
 # Stepper and Heater configuration
 ########################################
-
-[stepper_x]
-step_pin: X_STEP
-dir_pin: X_DIR
-enable_pin: !X_EN
-microsteps: 16
-rotation_distance: 40
-endstop_pin: ^X_MIN
-position_min: -1
-position_endstop: 0
-position_max: 525
-homing_speed: 100
-step_pulse_duration: 0.000003
-
-[stepper_y]
-step_pin: Y_STEP
-dir_pin: Y_DIR
-enable_pin: !Y_EN
-microsteps: 16
-rotation_distance: 40
-endstop_pin: Y_MIN
-position_min: -10
-position_endstop: -10
-position_max: 550
-homing_speed: 100
-step_pulse_duration: 0.000003
 
 [extruder]
 step_pin: E0_STEP
