moved extruder in seperate config

--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -21,6 +21,8 @@ restart_method: command
 
 # import x and y axis
 [include servos.cfg]
+# import extruder
+[include extruder.cfg]
 # import bed
 [include bed.cfg]
 
@@ -30,40 +32,6 @@ max_velocity: 1000
 max_accel: 10000
 max_z_velocity: 50
 max_z_accel: 20
-
-########################################
-# Stepper and Heater configuration
-########################################
-
-[extruder]
-step_pin: E0_STEP
-dir_pin: !E0_DIR
-enable_pin: !E0_EN
-microsteps: 8
-rotation_distance: 23.56
-gear_ratio: 50:10
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: HE0
-#sensor_type: ATC Semitec 104GT-2
-sensor_type: PT1000
-sensor_pin: TH0
-pressure_advance: 0.060
-control = pid
-pid_Kp = 25.389
-pid_Ki = 1.209
-pid_Kd = 133.291
-smooth_time: 0.5
-min_extrude_temp: 170
-min_temp: 10
-max_temp: 450
-max_extrude_only_distance: 110
-
-[tmc2209 extruder]
-uart_pin: E0_UART
-run_current: 0.500
-hold_current: 0.400
-interpolate: False
 
 ########################################
 # Fan configuration
