delayed probe parking and small changes

--- a/hevort/macros.cfg
+++ b/hevort/macros.cfg
@@ -19,11 +19,14 @@ gcode:
     M190 S{BED_TEMP} ; wait for bed temp
     M117 Bed Tilt
     Z_TILT_ADJUST
+    M104 S{EXTRUDER_TEMP} ; wait for extruder temp
     G28
+    M402
     M117 Waiting for Extruder
     M109 S{EXTRUDER_TEMP} ; wait for extruder temp
     # Prime line routine
     M117 Prime line
+    G1 X0 Y0 F18000.0;  move to start
     G0 Z0.3 ; Restore nozzle position
     G92 E0.0 ; reset extrusion distance
     G1 E3 F1000 ; de-retract and push ooze
@@ -44,8 +47,7 @@ gcode:
 gcode:
     M117 Done
     # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
+    TURN_OFF_HEATERS
     M106 S0
     # Move nozzle away from print while retracting
     G92 E0.0
@@ -54,6 +56,6 @@ gcode:
     # Raise nozzle by 10mm
     G1 Z10 F3000
     G90
-    G1 X0 Y500 F6000
+    G1 X0 Y500 F18000
     # Disable steppers
     M84
