--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -39,13 +39,13 @@ max_z_accel: 20
 
 [fan]
 pin: LED
-off_below: 0.1
+cycle_time: 0.0001 # for CPAP
 
 [heater_fan nozzle_fan]
 pin: FAN0
 heater: extruder
 heater_temp: 50.0
-fan_speed: 0.80
+fan_speed: 1
 
 ########################################
 # Display configuration
