--- a/hevort/euclid.cfg
+++ b/hevort/euclid.cfg
@@ -73,7 +73,7 @@
 pin: ^zboard:P0.10
 x_offset: 0
 y_offset: 30.0
-z_offset: 3.850
+z_offset: 3.950
 speed: 5
 samples: 5
 samples_result: median
@@ -101,14 +101,14 @@ gcode:
    G1 X250 Y250 F30000
    G28 Z
    G1 Z20 F600
-   M402
+   PROBE_PARK_LATER
 
 # Macro to Deploy Bed Probe
 [gcode_macro M401]
 gcode:
-    G90
+    QUERY_PROBE                 ; check probe status
     {action_respond_info("Entering M401")}
-    error_if_probe_deployed    ; check to make sure that the probe is not already attached
+    ; error_if_probe_deployed    ; check to make sure that the probe is not already attached
     _M401
 
 [gcode_macro error_if_probe_deployed]
@@ -127,16 +127,11 @@ gcode:
 gcode:
     G90
     {% if printer.probe.last_query %} 
-      G1 Z20 F600         ;  set approach elevation of Z20 to clear probe over bed on fixed gantry machine
-      G1 X250 Y250 F30000            ;  start movements at center of the bed 
-      G1 X523 Y400 F30000         ;  move the carraige to safe position to move from
-      G1 X523 Y502 F30000           ;  move to the side of the dock
-      G4 P250              ;  wait 1/4 second 
-      G1 X523 Y532 F3000             ;  move sideways over the dock to pick up probe
-      M400                 ;  wait for moves to finish
-      G4 P250              ;  pause 1/4 sec for detection
-      G1 X483 Y532 F3000           ;  move out of the dock in a straight line 
-      G1 Z20 F600              ;  move up to clear the probe over the bed of moving gantry or provide clearance for fixed gantry
+      _approach_dock
+      _position_side
+      _position_probe
+      _position_door
+      _approach_dock
     {% endif %}
     error_if_probe_not_deployed
     {action_respond_info("Exiting M401")}
@@ -155,9 +150,9 @@ gcode:
 # Macro to retract Bed Probe
 [gcode_macro M402]
 gcode:
-    G90
+    QUERY_PROBE                 ; check probe status
     {action_respond_info("Entering M402")}
-    error_if_probe_not_deployed
+    ; error_if_probe_not_deployed
     _M402
 
 # Macro to Stow Bed Leveling Probe
@@ -165,18 +160,14 @@ gcode:
 gcode:
     G90
     {% if not printer.probe.last_query %} ; the logic on this needs function check
-      G1 Z20 F600                  ;  set approach elevation of Z15 for fixed gantry system to clear probe over bed
-      #                             ;  for moving gantry system this may have to be altered to match your dock elevation
-      G1 X250 Y250 F30000            ;  start movements at center of the bed
-      G1 X463 Y532 F30000 
-      G1 X493 Y532 F30000               ;  move to a position in front of the dock so simple linear movement into dock 
-      G1 X523 Y532 F1800                 ;  slowly move into dock 
-      M400                          ;  wait for moves to finish
-      G4 P250                       ;  forced pause here so motion is definite 90 tavel to swipe
-      G1 X523 Y502 F6000               ;  quick swipe off 
-      G1 Z20 F600                   ;  move up to elevation of Z20
+      _approach_dock
+      _position_door
+      _position_probe
+      _position_side
+      _approach_dock
     {% endif %}                     ;  exit the if-then loop. was missing in previous versions
     error_if_probe_deployed         ;  verify that the probe is detached. is corrected error  
+    UPDATE_DELAYED_GCODE ID=PROBE_PARK_LATER_TICK DURATION=0
     {action_respond_info("Exiting M402")}
 
 # Definition of bed_mesh
@@ -195,7 +186,7 @@ rename_existing:    BED_MESH_CALIBRATE_ORIGINAL
 gcode:
   M401                           ; deploy Euclid Probe if needed
   BED_MESH_CALIBRATE_ORIGINAL    ; check bed level
-  M402                           ; dock Euclid Probe
+  PROBE_PARK_LATER
 
 # Definition of z_tilt
 [z_tilt]
@@ -218,12 +209,60 @@ rename_existing:    Z_TILT_ADJUST_ORIGINAL
 gcode:
   M401                           ; deploy Euclid Probe if needed
   Z_TILT_ADJUST_ORIGINAL         ; check bed level
-  M402                           ; dock Euclid Probe
+  PROBE_PARK_LATER
 
-[gcode_macro HOME_LVL_MESH]
+#### Positions for probe deploy 
+[gcode_macro _approach_dock]
 gcode:
-  G28                   ; home all
-  Z_TILT_ADJUST
-  G28 Z                 ; home Z
-  BED_MESH_CALIBRATE
- 
+      G90
+      G1 Z20 F600                 ;  set approach elevation of Z20 to clear probe over bed on fixed gantry machine
+      G1 X463 Y472 F30000         ;  move the carraige to safe position to move from
+      M400
+
+[gcode_macro _position_side]
+gcode:
+      G90
+      G1 X523 Y502 F3000          ;  move to the side of the dock
+      M400
+
+[gcode_macro _position_door]
+gcode:
+      G90
+      G1 X483 Y532 F3000 
+      M400
+
+[gcode_macro _position_probe]
+gcode:
+      G90
+      G1 X523 Y532 F1800 
+      M400
+
+### Section for delayed probe parking ###
+[respond]
+
+[gcode_macro PROBE_CONFIG]
+variable_ticks: 0
+variable_reset_ticks: 10
+variable_delay_ticks: 10
+gcode:
+  RESPOND PREFIX="info" MSG="Probe > Config ..."
+
+[gcode_macro PROBE_PARK_LATER]
+gcode:
+  RESPOND PREFIX="info" MSG="Probe > Park Later > Restart Timer to {printer['gcode_macro PROBE_CONFIG'].reset_ticks}"
+  SET_GCODE_VARIABLE MACRO=PROBE_CONFIG VARIABLE=ticks VALUE={printer['gcode_macro PROBE_CONFIG'].reset_ticks}
+  UPDATE_DELAYED_GCODE ID=PROBE_PARK_LATER_TICK DURATION={printer['gcode_macro PROBE_CONFIG'].delay_ticks}
+  QUERY_PROBE
+
+[delayed_gcode PROBE_PARK_LATER_TICK]
+initial_duration: 0
+gcode:
+  SET_GCODE_VARIABLE MACRO=PROBE_CONFIG VARIABLE=ticks VALUE={printer['gcode_macro PROBE_CONFIG'].ticks - 1}
+  {% if printer['gcode_macro PROBE_CONFIG'].ticks <=1 %}
+    RESPOND PREFIX="info" MSG="Probe > Park Later > Ticking limits reached, parking probe..."
+    M402
+  {% else %}
+    ## tick one more time
+    RESPOND PREFIX="info" MSG="Probe > Park Later > Ticking - {printer['gcode_macro PROBE_CONFIG'].ticks - 1}"
+    UPDATE_DELAYED_GCODE ID=PROBE_PARK_LATER_TICK DURATION={printer['gcode_macro PROBE_CONFIG'].delay_ticks}
+  {% endif %}
